SERVER-130343: Ensure setAllowChunkOperations uses the Sharding-Fixed executor. (#57337)

GitOrigin-RevId: 08e25dda3d3be52d2bc6479611e1f9017f366e70